force-app/main/default/objects/Order_Line_Item__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <referenceTo>Device__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>