force-app/main/default/objects/Order_Line_Item__c/fields/Device_Order__c.field-meta.xml
<CustomField>
    <fullName>Device_Order__c</fullName>
    <label>Device Order</label>
    <referenceTo>Device_Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>