force-app/main/default/objects/Order_Line_Item__c/fields/Line_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount_Amount__c</fullName>
    <description>Calculated discount amount for this line item</description>
    <formula>IF(AND(NOT(ISBLANK(Unit_Price__c)), NOT(ISBLANK(Quantity__c)), NOT(ISBLANK(Line_Discount_Percentage__c))), 
    (Unit_Price__c * Quantity__c) * Line_Discount_Percentage__c, 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated as (Unit Price × Quantity) × Line Discount Percentage.</inlineHelpText>
    <label>Line Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>