force-app/main/default/objects/Order_Line_Item__c/fields/Line_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Discount percentage applied to this specific line item</description>
    <inlineHelpText>Apply a discount percentage to this line item. This is separate from any order-level discounts.</inlineHelpText>
    <label>Line Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>