force-app/main/default/objects/Order_Line_Item__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Sequential line number within the order for organization and reference</description>
    <inlineHelpText>Automatically assigned sequential number for this line item within the order.</inlineHelpText>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>