force-app/main/default/objects/Order_Line_Item__c/fields/Line_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Line_Profit_Margin__c</fullName>
    <description>Profit margin percentage for this line item based on unit price and device cost</description>
    <formula>IF(AND(NOT(ISBLANK(Unit_Price__c)), NOT(ISBLANK(Device__r.Cost_Price__c)), Unit_Price__c > 0), 
    ((Unit_Price__c - Device__r.Cost_Price__c) / Unit_Price__c) * 100, 
    NULL)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Profit margin for this line item calculated from unit price and device cost.</inlineHelpText>
    <label>Line Profit Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>