force-app/main/default/objects/Order_Line_Item__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>Total amount for this line item after applying line-level discounts</description>
    <formula>IF(AND(NOT(ISBLANK(Unit_Price__c)), NOT(ISBLANK(Quantity__c))),
    (Unit_Price__c * Quantity__c) - BLANKVALUE(Line_Discount_Amount__c, 0),
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated as (Unit Price × Quantity) - Line Discount Amount.</inlineHelpText>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>