force-app/main/default/objects/Order_Line_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product name snapshot for historical reference</description>
    <formula>Device__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Product name at the time of order for historical reference.</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>