force-app/main/default/objects/Order_Line_Item__c/fields/Stock_Available__c.field-meta.xml
<CustomField>
    <fullName>Stock_Available__c</fullName>
    <description>Real-time stock quantity available for this device</description>
    <formula>Device__r.Stock_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current stock quantity available for this device.</inlineHelpText>
    <label>Stock Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>